# efficient-transformers

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Introduction.html  LICENSE  Linux_installation.html  Makefile  PAGED_KV_PR.md  QEfficient.cloud.html  QEfficient.customop.html  QEfficient.exporter.html  QEfficient.generation.html  QEfficient.html  QEfficient.transformers.html  QEfficient.utils.html  README.html  README.md  Validate.html  apply_chulhee_patch.patch  blogs.html  compile_full_model.py  docs.html  dynamo_requirements.txt  embedding_test.py  everything.txt  examples.html  gemma4.py  gemma4_qeff_aligned.py  gemma4_utils.py  genindex.html  gpu_test.py  index.html  kv_change.html  low_level_api.html  mkdocs.yml  modules.html  notebooks.html  (+61 more)
.github/: CODEOWNERS  quic-organization-repolinter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: model_onboarding.md
.github/workflows/: Mirror_Fork_PRs_to_GHES.yml  Qeff_Jenkins_Check.yml  daily-pr-report.yml  docs-check.yml  docs-deploy.yml  docs-release.yml  docs.yml  internal-review-summary.yml  lint-format.yml  model-onboarding-checklist.yml  protected-manifest.yml  quic-organization-repolinter.yml  quickcheck.yml  unit-tests.yml
QEfficient/: __init__.py  version.py
QEfficient/base/: __init__.py  blocking_configurator.py  common.py  modeling_qeff.py  onnx_transforms.py  pytorch_transforms.py  transforms.py
QEfficient/benchmarking/: __init__.py  causal_lm_microbenchmark.py
QEfficient/blocking/: attention_blocking.py  blocked_attention_forwards.py  blocked_ffn_forwards.py  blocking_configurator.py  ffn_blocking.py  get_num_blocks.py
QEfficient/cloud/: api_server.py  compile.py  custom_yaml.py  execute.py  export.py  finetune.py  finetune_experimental.py  infer.py  server.py
QEfficient/compile/: compile_helper.py  compiler_constands  compiler_constants.py  cross_compile.py  mdp_generator.py  qnn_compiler.py  qnn_config.json
QEfficient/customop/: CMakeLists.txt  README.md  __init__.py  ctx_paged_scatter_gather.py  ctx_scatter_gather.py  ctx_scatter_gather_cb.py  custom_rms_op_config.yaml  dynamo_ops.py  matmulnbits.py  mmdit.py  onnxscript_utils.py  quantization_ops.py  rms_norm.py  rms_norm_native.py  rms_norm_native.yaml  utils.py
QEfficient/customop/CustomRMSNorm/src/: customrmsnorm_aic.cpp  customrmsnorm_functions.cpp
QEfficient/diffusers/: README.md
QEfficient/exporter/: __init__.py  checkpoint_transforms.py  export_hf_to_cloud_ai_100.py  export_utils.py  weight_free.py  weight_spec.py
QEfficient_Library.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
_modules/: QEfficient.html  index.html
_sources/: Introduction.md.txt  QEfficient.cloud.md.txt  QEfficient.customop.md.txt  QEfficient.customop.rst.txt  QEfficient.exporter.md.txt  QEfficient.generation.md.txt  QEfficient.generation.rst.txt  QEfficient.md.txt  QEfficient.rst.txt  QEfficient.transformers.md.txt  QEfficient.utils.md.txt  QEfficient.utils.rst.txt  Validate.md.txt  docs.rst.txt  examples.md.txt  index.md.txt  low_level_api.md.txt  modules.rst.txt  other_api.md.txt  performance.md.txt  scripts.md.txt
_static/: sphinx_immaterial_theme.4e38d84854f532105.min.css
agent_space/: cleanup.md  llama32_1b_pass_disable_timing_plan.md  qwen3_vl_decode_tiny_pass_probe_plan.md
app/: Readme.md  app.py  app_config.json  cert.pem  demo.css  key.pem  qpc.json  requirements.txt  utils.py
docs/: QEfficient.generation.md  README.md  __init__.py  conf.py  docs.md  index.md  index.rst  kv_change.md  low_level_api.md  qwen3vl_dynamo_export_fixes.md  requirements.txt  setup.md  validation.md  variable_spd_specializations.md
dream_practice/: attention_mask.raw  blocking_practice.py  dream_inference.py  input_id.raw  log_dream2.txt  log_dream3.txt  mdp_ts_16.json  mdp_ts_2.json  mdp_ts_4.json  modeling_dream.py  onnx_practice.py  run_dream_qpc.py  run_dream_qpc_generate.py
examples/: 120b_full_gpt_oss.py  CONTRIBUTING.md  README.md  README_qwen3_5.md  basic_gguf_models.py  basic_vlm_inference.py  ccl_gpt_oss.py  ccl_image_text_to_text_inference.py  ccl_llama4_CB_example_vision_lang.py  ccl_llama4_example.py  ccl_llama4_multi_image_example.py  ccl_mistral3_example.py  ccl_molmo_example.py  ccl_qwen2_5_vl_CB.py  ccl_qwen2_5_vl_example.py  compare.py  compute_context_length.py  draft_spd_inference.py  embedding_model.py  example_ccl.py  export_kimik2.py  extract_graph.py  full_gpt_oss.py  gemma3_text.py  gpt_oss.py  gpt_oss_disagg_mode.py  gpt_oss_disagg_mode_with_chunking.py  image_text_to_text_inference.py  internvl_CB_example.py  internvl_inference.py  llama4_CB_example.py  llama4_CB_example_vision_lang.py  llama4_example.py  llama4_lm_example.py  llama4_mm_single.py  llama4_multi_image_example.py  lora_models.py  merge_all.py  merge_graphs.py  mistral3_example.py  (+28 more)
examples/cpp_execution/: CMakeLists.txt  InferenceSetIOBuffer.cpp  InferenceSetIOBufferExample.cpp  README.md  text_inference_using_cpp.py
exps/: run_swiftkv.py
notebooks/: QEfficientGPT2.ipynb  QEfficientMPT.ipynb
patches/: 872132_gpt_oss.patch
scripts/: Jenkinsfile  README.md  calculate_perplexity.py  check_model_onboarding_pr.sh  nightly_email_report.py  preprocess_moe_checkpoint.py  specializations.json
skills_studio/: AGENTS.md
source/: Introduction.html  Linux_installation.html  Validate.html  blogs.html  cli_api.html  diffuser_classes.html  features_enablement.html  finetune.html  high_level_api.html  hl_api.html  installation.html  introduction.html  kv_change.html  ll_api.html  low_level_api.html  other_api.html  performance.html  python_api.html  qeff_autoclasses.html  quick_start.html  reference.html  release_docs.html  supported_features.html  upgrade.html  upgrade_efficient_transfromers.html  validate.html
tests/: CMakeLists.txt  HL_testing_input.json  README.md  config.json  conftest.py  index.html  report.html  split_grok_compile.py  test_gpt.py  test_loader.py  test_matrix.py  test_model_quickcheck.py  test_skip_softmax_kv_blocking.py  utils.py
(+1553 files in other folders)
